@@ -1,5 +1,5 @@
 PACKAGE_NAME="akvcam"
-PACKAGE_VERSION="1.2.1"
+PACKAGE_VERSION="1.2.2"
 
 MAKE[0]="make KERNEL_DIR=${kernel_source_dir} all"
 CLEAN="make clean"
